idea/testData/multiFileInspections/invalidBundleOrProperty/before/unresolvedPropertyReference.kt
fun test() {
    K.message("foo.baz", "arg")
    K.message("foo.baz")
    J.message("foo.baz", "arg")
    J.message("foo.baz")
}